<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/download_info_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="51dp"
        android:layout_marginRight="65dp"
        android:fontFamily="@font/san_francisco_bold"
        android:gravity="center"
        android:text="@string/dialog_delete_title"
        android:textColor="@color/dialog_delete_text_color"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/dialog_confirm_delete_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/san_francisco_medium"
            android:gravity="center"
            android:text="@string/dialog_delete_cancel"
            android:textColor="@color/dialog_delete_cancel_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dialog_confirm_delete_oke"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/san_francisco_medium"
            android:gravity="center"
            android:text="@string/dialog_delete_ok"
            android:textColor="@color/dialog_delete_ok_color"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>